<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="search">Tìm kiếm</string>
    <string name="playShuffle">Phát ngẫu nhiên tất cả</string>
    <string name="setting">Cài đặt</string>
    <string name="playShuffleAll">Phát ngẫu nhiên tất cả</string>
    <string name="album">Album</string>
    <string name="shakeToShuffle">Lắc để đổi bài</string>
    <string name="play">Phát</string>
    <string name="detail">Chi tiết</string>
    <string name="sortAZ">Sắp xếp A-Z</string>
    <string name="sortZA">Sắp xếp Z-A</string>
    <string name="artist">Nghệ sỹ</string>
    <string name="song">Bài hát</string>
    <string name="show_all_song">Hiển thị tất cả bài hát</string>
    <string name="show_all_artist">Hiển thị tất cả nghệ sỹ</string>
    <string name="show_all_album">Hiển thị tất cả album</string>
    <string name="noSearchFound">Không tìm thấy kết quả</string>
    <string name="pleaseCheck">Hãy kiểm tra lại lỗi chính tả hoặc\nthử một từ khóa khác</string>
    <string name="music">NHẠC</string>
</resources>
