<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/miPlayShuffle"
        android:title="@string/playShuffle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miSortAZ"
        android:title="@string/sortAZ"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miSortZA"
        android:title="@string/sortZA"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miShakeToShuffle"
        android:checkable="true"
        android:orderInCategory="200"
        android:title="@string/shakeToShuffle"
        android:visible="true"
        app:showAsAction="never"/>
</menu>